--- a/src/main.css
+++ b/src/main.css
@@ -1,24 +1,63 @@
 html {
     background-color: black;
-    color: #33FF00;
+    padding: 20px;
+    font-family: 'Courier New', Courier, monospace;
 }
-input {
+label {
+    display: flex;
+    justify-content: flex-start
+}
+label > p {
+    background-color: #33FF00;
+    padding: 10px;
+    font-weight: 800;
+}
+.container-wrapper {
+    display: grid;
+    grid-template-rows: repeat(3, auto);
+    max-width: 50vw;
+}
+
+.input-bar > input:disabled {
+    background: lightgray;
+}
+    
+.input-bar >  input {
+    flex: 1 1 100%;
     background-color: #33FF00;
     border: 0;
-    
+    font-family: 'Courier New', Courier, monospace;
+    padding: 10px;
+    font-size: medium;   
+    font-weight: 800;
 }
+
 .container {
     display: grid;
-    grid-template-columns: repeat(9, 50px);
-    grid-template-rows: repeat(9, 50px)
+    gap: 5px 5px;
+    grid-template-columns: repeat(9, auto);
+    grid-template-rows: repeat(9, auto);
+    justify-content: left;
+    align-content: flex-start;
+    
+}
+
+.column3, .column6 {
+    margin-right: 20px;
+}
+
+.row3, .row6 {
+    margin-bottom: 20px;
 }
 
 .container > input {
+    background-color: #33FF00;
     border: 1px solid black;
     width: 50px;
     height: 50px;
     text-align: center;
     font-size: 40px;
+    font-family: 'Courier New', Courier, monospace;
     
 }
 
