--- a/src/main.css
+++ b/src/main.css
@@ -33,6 +33,7 @@ label > p {
 }
 
 .container {
+    margin-top: 15px;
     display: grid;
     gap: 5px 5px;
     grid-template-columns: repeat(9, auto);
