--- a/src/main.css
+++ b/src/main.css
@@ -3,28 +3,40 @@ html {
     padding: 20px;
     font-family: 'Courier New', Courier, monospace;
 }
-label {
+body {
     display: flex;
-    justify-content: flex-start
 }
+
 label > p {
-    background-color: #33FF00;
+    background-color: #FFCC00;
     padding: 10px;
     font-weight: 800;
 }
+
 .container-wrapper {
-    display: grid;
-    grid-template-rows: repeat(3, auto);
-    max-width: 50vw;
+    align-self: center;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.container-wrapper > * {
+    flex: 1;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.input-bar{
+    width:100%;
 }
 
 .input-bar > input:disabled {
     background: lightgray;
 }
     
-.input-bar >  input {
-    flex: 1 1 100%;
-    background-color: #33FF00;
+.input-bar >  input {     
+    flex: 1;
+    background-color: #FFCC00;
     border: 0;
     font-family: 'Courier New', Courier, monospace;
     padding: 10px;
@@ -32,15 +44,19 @@ label > p {
     font-weight: 800;
 }
 
+.input-bar >  input:not(:last-child){
+    margin-right: 5px;
+}
+
 .container {
-    margin-top: 15px;
+    border: 5px solid #FFCC00 ;
+    padding:15px;
     display: grid;
     gap: 5px 5px;
     grid-template-columns: repeat(9, auto);
     grid-template-rows: repeat(9, auto);
     justify-content: left;
-    align-content: flex-start;
-    
+    align-content: flex-start;    
 }
 
 .column3, .column6 {
@@ -52,19 +68,24 @@ label > p {
 }
 
 .container > input {
-    background-color: #33FF00;
+    background-color: #FFCC00;
     border: 1px solid black;
     width: 50px;
     height: 50px;
     text-align: center;
     font-size: 40px;
-    font-family: 'Courier New', Courier, monospace;
-    
+    font-family: 'Courier New', Courier, monospace;    
 }
 
 .container > input:disabled {
     color: rgba(0, 0, 0, 0.4);
 }
+
+.container > input.solved {
+    background-color: #33FF00;
+    color:black;
+}
+
 input[type='number']::-webkit-inner-spin-button, 
 input[type='number']::-webkit-outer-spin-button { 
     -webkit-appearance: none;
